--- a/src/css/login.css
+++ b/src/css/login.css
@@ -375,3 +375,84 @@ input::placeholder {
         width: 50%;
     }
 }
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    border: 2px solid #3c4e3c;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+#popupMessage{
+    color: #008000;
+}
+.close {
+    position: absolute;
+    color: #ff0000;
+    top: -2px;
+    left: 17.5rem;
+    padding: 20px 5px 20px 20px;
+    cursor: pointer;
+}
+
+#RegistreButton, #recoverButton, #reloadButton {
+    display: none;
+    margin: 10px 5px;
+    cursor: pointer;
+}
+
+#RegistreButton {
+    background-color: #38793e;
+    border-radius: 5px;
+    color: #fff;
+    padding: 5px 20px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+}
+
+#RegistreButton:hover {
+    background: rgb(102, 156, 112);
+    background: linear-gradient(102deg, rgba(102, 156, 112, 1) 0%, rgba(56, 121, 62, 1) 36%, rgba(3, 75, 6, 1) 78%);
+}
+
+#recoverButton {
+    background: rgb(0, 102, 204);
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    color: #fff;                              
+    padding: 0 10px;
+}
+
+#recoverButton:hover {
+    background: rgb(128, 176, 209);
+    background: linear-gradient(90deg, rgba(128, 176, 209, 1) 0%, rgba(44, 96, 175, 1) 50%, rgba(8, 45, 116, 1) 100%);
+}
+
+#reloadButton {
+    background: rgb(226, 196, 196);
+    border-radius: 5px;
+    color: #070707;
+    padding: 5px 20px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+#reloadButton:hover {
+    background: rgb(242, 242, 242);
+    background: linear-gradient(90deg, rgba(242, 242, 242, 1) 0%, rgba(213, 165, 178, 1) 50%, rgba(115, 87, 87, 1) 100%);
+}
